--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -65,6 +65,8 @@
 
         <h1>Texto con formato Roboto</h1>
         <button mat-button (click)="nuevo()">new</button>
+<app-file-upload></app-file-upload>
+            
 
         <!-- <div class="background-spinner" *ngIf="loading">
         <mat-progress-spinner [diameter]="200" [strokeWidth]="5" color="primary" mode="indeterminate">
