--- a/src/app/components/patient/patient-edit/patient-edit.component.html
+++ b/src/app/components/patient/patient-edit/patient-edit.component.html
@@ -1,6 +1,6 @@
 
 
-        <h1 mat-dialog-title>Editar Asset</h1>
+        <h1 mat-dialog-title>Editar Paciente</h1>
 
         <div class="formulario">
         
