--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,13 @@
 <mat-toolbar color="primary" class="mat-elevation-z5">
     <mat-toolbar-row>
+       
         <button type="button" mat-icon-button (click)="snav.toggle()">
             <mat-icon>menu</mat-icon>
         </button>
-        <!-- <a mat-button routerLink="/home">Home</a>
-        <a mat-button routerLink="/home/dashboard">Dashboard</a>
-        <a mat-button routerLink="/home/assets">Assets</a> -->
+        <a mat-button routerLink="/home">
+            <span>PsyControl</span>
+            </a>
+        
         <span class="toolbar-spacer">
         </span>
 
@@ -13,8 +15,8 @@
 
             <div class="user-info">
                 <img src="../../../assets/img/avatar.png">
-                <h3>Maria Valerio</h3>
-                <h5>mariavaleriopsico@gmail.com</h5>
+                <h3>{{userInfo.firstname}} {{userInfo.lastname}}</h3>
+                <h5>{{userInfo.email}}</h5>
             </div>
 
             <mat-divider></mat-divider>
@@ -45,16 +47,18 @@
         <mat-nav-list>
             <div style="height: 60px"></div>
             <a mat-list-item [routerLink]="'/home'" matTooltip="Home">
-                <mat-icon matBadge="8" matBadgePosition="below after" matBadgeColor="warn" matBadgeSize="small">home
+                <mat-icon>home
                 </mat-icon>
             </a>
-            <a mat-list-item [routerLink]="'/home/dashboard'" matTooltip="Dashboard">
-                <mat-icon>pie_chart</mat-icon>
-                <!-- <span>Dashboard</span> -->
+            <a mat-list-item [routerLink]="'/home/file-upload'" matTooltip="Files">
+                <mat-icon>library_books</mat-icon>
+                <!-- <span>Dashboard</span> matBadge="8" matBadgePosition="below after" matBadgeColor="warn" matBadgeSize="small"-->
             </a>
             <a mat-list-item [routerLink]="'/home/patient-list'" matTooltip="Pacientes">
+                <mat-icon>check</mat-icon>
+            </a>
+            <a *ngIf="adminRole" mat-list-item [routerLink]="'/home/user-list'" matTooltip="Usuarios">
                 <mat-icon>supervisor_account</mat-icon>
-                <!-- <span>Assets</span>  -->
             </a>
 
         </mat-nav-list>
