--- a/src/app/components/patient/patient-list/patient-list.component.css
+++ b/src/app/components/patient/patient-list/patient-list.component.css
@@ -7,3 +7,8 @@ table {
     right: 5%; /* Add this and change value to set the margin you want */
     bottom: 5%
 }
+
+.mat-row:hover {
+    background-color: rgb(214, 215, 218);
+    cursor: pointer;
+}
