--- a/src/app/components/patient/patient-list/patient-list.component.html
+++ b/src/app/components/patient/patient-list/patient-list.component.html
@@ -5,8 +5,8 @@
   
 <mat-card>
   <mat-form-field>
-      <input matInput (keyup)="filterField($event.target.value)" placeholder="Buscar" [(ngModel)]="value">
-      <button mat-button *ngIf="value" matSuffix mat-icon-button (click)="clear()">
+      <input matInput (keyup)="filterField($event.target.value)" placeholder="Buscar" [(ngModel)]="filterValue">
+      <button mat-button *ngIf="filterValue!=''" matSuffix mat-icon-button (click)="clear()">
           <mat-icon>close</mat-icon>
         </button>
     </mat-form-field>
@@ -16,27 +16,32 @@
 
   <ng-container matColumnDef="firstname">
     <th mat-header-cell *matHeaderCellDef> Nombres </th>
-    <td mat-cell *matCellDef="let patient"> {{patient.firstname}} </td>
+    <td mat-cell *matCellDef="let patient"
+    [innerHTML]="patient.firstname | highLightSearch: filterValue"> {{patient.firstname}} </td>
   </ng-container>
 
   <ng-container matColumnDef="lastname">
     <th mat-header-cell *matHeaderCellDef> Apellidos </th>
-    <td mat-cell *matCellDef="let patient"> {{patient.lastname}} </td>
+    <td mat-cell *matCellDef="let patient"
+    [innerHTML]="patient.lastname | highLightSearch: filterValue"> {{patient.lastname}} </td>
   </ng-container>
 
   <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef> email </th>
-    <td mat-cell *matCellDef="let patient"> {{patient.email}} </td>
+    <td mat-cell *matCellDef="let patient"
+    [innerHTML]="patient.email | highLightSearch: filterValue"> {{patient.email}} </td>
     
   </ng-container>
 
    <ng-container matColumnDef="phone">
     <th mat-header-cell *matHeaderCellDef> Teléfono </th>
-        <td mat-cell *matCellDef="let patient"> {{patient.phone}} </td>
+        <td mat-cell *matCellDef="let patient"
+        [innerHTML]="patient.phone | highLightSearch: filterValue"> {{patient.phone}} </td>
   </ng-container> 
   <ng-container matColumnDef="mobile">
     <th mat-header-cell *matHeaderCellDef> Celular </th>
-        <td mat-cell *matCellDef="let patient"> {{patient.mobile}} </td>
+        <td mat-cell *matCellDef="let patient"
+        [innerHTML]="patient.mobile | highLightSearch: filterValue"> {{patient.mobile}} </td>
   </ng-container> 
 
   <ng-container matColumnDef="accion">
@@ -50,7 +55,7 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onSelect(row)"></tr>
   
 
 </table>
