--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,15 +1,17 @@
+<div [class.alternative]="otherTheme">
 <mat-toolbar color="primary" class="mat-elevation-z5">
     <mat-toolbar-row>
        
-        <button type="button" mat-icon-button (click)="snav.toggle()">
+        <button mat-icon-button (click)="snav.toggle()">
             <mat-icon>menu</mat-icon>
         </button>
-        <a mat-button routerLink="/home">
-            <span>PsyControl</span>
-            </a>
+            <span>LogoApp</span>
         
         <span class="toolbar-spacer">
         </span>
+        <button mat-icon-button (click)="changeTheme()">
+            <mat-icon>emoji_objects</mat-icon>
+        </button>
 
         <mat-menu #settingsMenu="matMenu" xPosition="before">
 
@@ -50,7 +52,7 @@
                 <mat-icon>home
                 </mat-icon>
             </a>
-            <a mat-list-item [routerLink]="'/home/file-upload'" matTooltip="Files">
+            <a *ngIf="adminRole" mat-list-item [routerLink]="'/home/file-upload'" matTooltip="Files">
                 <mat-icon>library_books</mat-icon>
                 <!-- <span>Dashboard</span> matBadge="8" matBadgePosition="below after" matBadgeColor="warn" matBadgeSize="small"-->
             </a>
@@ -75,3 +77,6 @@
 
 
 </mat-sidenav-container>
+
+
+</div>
