--- a/src/app/components/patient/patient-edit/patient-edit.component.html
+++ b/src/app/components/patient/patient-edit/patient-edit.component.html
@@ -1,67 +1,49 @@
+<h1 mat-dialog-title>Editar Paciente</h1>
+
+<div class="formulario">
+
+    <div mat-dialog-content [formGroup]="editForm">
 
 
-        <h1 mat-dialog-title>Editar Paciente</h1>
+        <input formControlName="id" hidden>
 
-        <div class="formulario">
-        
-        <div mat-dialog-content [formGroup]="editForm">
-    
-            <p>
-                <mat-form-field appearance="outline">
-                    <mat-label>Nombres</mat-label>
-                    <input matInput 
-                    [(ngModel)]="patient.firstname"
-                    formControlName="firstname">
-                    <mat-error *ngIf="editForm.controls['firstname'].errors?.required">Obligatorio</mat-error>
-                </mat-form-field>
-                <p>
-                    <mat-form-field appearance="outline">
-                        <mat-label>Apellidos</mat-label>
-                        <input matInput
-                        [(ngModel)]="patient.lastname"
-                        formControlName="lastname">
-                        <mat-error *ngIf="editForm.controls['lastname'].errors?.required">Obligatorio</mat-error>
-                    </mat-form-field>
-                </p>
-                <p>
-                    <mat-form-field appearance="outline">
-                        <mat-label>email</mat-label>
-                        <input matInput
-                        [(ngModel)]="patient.email"
-                        formControlName="email">
-                        <mat-error *ngIf="editForm.controls['email'].errors?.required">Obligatorio</mat-error>
-                    </mat-form-field>
-                </p>
-                <p>
-                    <mat-form-field appearance="outline">
-                        <mat-label>Teléfono</mat-label>
-                        <input matInput
-                        [(ngModel)]="patient.phone"
-                        formControlName="phone">
-                        <mat-error *ngIf="editForm.controls['phone'].errors?.required">Obligatorio</mat-error>
-                    </mat-form-field>
-                </p>
-                <p>
-                    <mat-form-field appearance="outline">
-                        <mat-label>Celular</mat-label>
-                        <input matInput
-                        [(ngModel)]="patient.mobile"
-                        formControlName="mobile">
-                        <mat-error *ngIf="editForm.controls['mobile'].errors?.required">Obligatorio</mat-error>
-                    </mat-form-field>
-                </p>
-        </div>
+
+        <p>
+            <mat-form-field appearance="outline">
+                <mat-label>Nombre(s)</mat-label>
+                <input matInput formControlName="firstname">
+                <mat-error *ngIf="editForm.controls['firstname'].errors?.required">Obligatorio</mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Apellido(s)</mat-label>
+                <input matInput formControlName="lastname">
+                <mat-error *ngIf="editForm.controls['lastname'].errors?.required">Obligatorio</mat-error>
+            </mat-form-field>
+        </p>
+        <p>
+            <mat-form-field appearance="outline">
+                <mat-label>Teléfono</mat-label>
+                <input matInput formControlName="phone">
+                <mat-error *ngIf="editForm.controls['phone'].errors?.required">Obligatorio</mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Celular</mat-label>
+                <input matInput formControlName="mobile">
+                <mat-error *ngIf="editForm.controls['mobile'].errors?.required">Obligatorio</mat-error>
+            </mat-form-field>
+        </p>
+        <p>
+            <mat-form-field appearance="outline">
+                <mat-label>email</mat-label>
+                <input matInput formControlName="email">
+                <mat-error *ngIf="editForm.controls['email'].errors?.required">Obligatorio</mat-error>
+            </mat-form-field>
+        </p>
     </div>
-    
-        <div mat-dialog-actions align="center">
-            <button mat-button color="primary" (click)="cancel()">Cancelar</button>
-            <button mat-raised-button color="primary"
-            [disabled]="editForm.invalid" 
-            [mat-dialog-close]="patient" >Guardar</button>
-        </div>
-    
-    
-   
-    
-    
-    
+</div>
+
+<div mat-dialog-actions align="center">
+    <button mat-button color="primary" (click)="cancel()">Cancelar</button>
+    <button mat-raised-button color="primary" [disabled]="editForm.invalid"
+        [mat-dialog-close]="patient">Guardar</button>
+</div>
