--- a/src/app/components/patient/patient-list/patient-list.component.css
+++ b/src/app/components/patient/patient-list/patient-list.component.css
@@ -9,6 +9,10 @@ table {
 }
 
 .mat-row:hover {
-    background-color: rgb(214, 215, 218);
-    cursor: pointer;
+    background-color: rgba(2, 240, 248, 0.2);
 }
+
+mat-paginator {
+    display: flex;
+    justify-content: center;
+  } 
