--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -13,24 +13,15 @@
   flex: 1 1 auto;
 }
 
-.themes{
-  display: flex;
-  align-content: center;
-  align-items: center;
-  height: 60px;
-  background-color: darkgoldenrod;
-  padding-left: 20px;
-}
-
 .mat-sidenav {
   background-color: rgb(42, 45, 49);
   position: fixed;
 }
 
-.mat-sidenav-content{
+/* .mat-sidenav-content{
   min-height: 700px;
   background-color: rgb(246, 245, 250)
-} 
+}  */
 
 .mat-list-item {
   color: white !important;
@@ -84,7 +75,11 @@ mat-progress-spinner {
   position: fixed;
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vh;
+  height: 100vh;
   z-index: 1000;
+}
+
+.container {
+  height: 100vh;
 }
