--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,82 +1,82 @@
 <div [class.alternative]="otherTheme">
-<mat-toolbar color="primary" class="mat-elevation-z5">
-    <mat-toolbar-row>
-       
-        <button mat-icon-button (click)="snav.toggle()">
-            <mat-icon>menu</mat-icon>
-        </button>
+    <mat-toolbar color="primary" class="mat-elevation-z5">
+        <mat-toolbar-row>
+
+            <button mat-icon-button (click)="snav.toggle()">
+                <mat-icon>menu</mat-icon>
+            </button>
             <span>LogoApp</span>
-        
-        <span class="toolbar-spacer">
-        </span>
-        <button mat-icon-button (click)="changeTheme()">
-            <mat-icon>emoji_objects</mat-icon>
-        </button>
 
-        <mat-menu #settingsMenu="matMenu" xPosition="before">
+            <span class="toolbar-spacer">
+            </span>
+            <button mat-icon-button (click)="changeTheme()">
+                <mat-icon>emoji_objects</mat-icon>
+            </button>
 
-            <div class="user-info">
-                <img src="../../../assets/img/avatar.png">
-                <h3>{{userInfo.firstname}} {{userInfo.lastname}}</h3>
-                <h5>{{userInfo.email}}</h5>
+            <mat-menu #settingsMenu="matMenu" xPosition="before">
+
+                <div class="user-info">
+                    <img src="../../../assets/img/avatar.png">
+                    <h3>{{userInfo.firstname}} {{userInfo.lastname}}</h3>
+                    <h5>{{userInfo.email}}</h5>
+                </div>
+
+                <mat-divider></mat-divider>
+                <button mat-menu-item>
+                    <mat-icon>settings</mat-icon>
+                    <span>Configuración</span>
+                </button>
+                <button mat-menu-item (click)="logOut()">
+                    <mat-icon>power_settings_new</mat-icon>
+                    <span>Salir</span>
+                </button>
+            </mat-menu>
+
+            <img class="avatar-img" src="../../../assets/img/avatar.png" [matMenuTriggerFor]="settingsMenu">
+
+
+        </mat-toolbar-row>
+
+    </mat-toolbar>
+
+    <mat-sidenav-container>
+
+
+        <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches">
+
+            <mat-nav-list>
+                <div style="height: 60px"></div>
+                <a mat-list-item [routerLink]="'/home'" matTooltip="Home">
+                    <mat-icon>home
+                    </mat-icon>
+                </a>
+                <a *ngIf="adminRole" mat-list-item [routerLink]="'/home/file-upload'" matTooltip="Files">
+                    <mat-icon>library_books</mat-icon>
+                    <!-- <span>Dashboard</span> matBadge="8" matBadgePosition="below after" matBadgeColor="warn" matBadgeSize="small"-->
+                </a>
+                <a mat-list-item [routerLink]="'/home/patient-list'" matTooltip="Pacientes">
+                    <mat-icon>check</mat-icon>
+                </a>
+                <a *ngIf="adminRole" mat-list-item [routerLink]="'/home/user-list'" matTooltip="Usuarios">
+                    <mat-icon>supervisor_account</mat-icon>
+                </a>
+
+            </mat-nav-list>
+
+        </mat-sidenav>
+
+        <mat-sidenav-content>
+            <div class="background-spinner" *ngIf="loading">
+                <mat-progress-spinner [diameter]="200" [strokeWidth]="5" color="primary" mode="indeterminate">
+                </mat-progress-spinner>
             </div>
-
-            <mat-divider></mat-divider>
-            <button mat-menu-item>
-                <mat-icon>settings</mat-icon>
-                <span>Configuración</span>
-            </button>
-            <button mat-menu-item (click)="logOut()">
-                <mat-icon>power_settings_new</mat-icon>
-                <span>Salir</span>
-            </button>
-        </mat-menu>
-
-        <img class="avatar-img" src="../../../assets/img/avatar.png" [matMenuTriggerFor]="settingsMenu">
+            <div class="container">
+                <router-outlet></router-outlet>
+            </div>
+        </mat-sidenav-content>
 
 
-    </mat-toolbar-row>
-
-</mat-toolbar>
-
-<mat-sidenav-container>
-
-    
-    <mat-sidenav #snav 
-    [mode]="mobileQuery.matches ? 'over' : 'side'" 
-    [fixedInViewport]="mobileQuery.matches">
-
-        <mat-nav-list>
-            <div style="height: 60px"></div>
-            <a mat-list-item [routerLink]="'/home'" matTooltip="Home">
-                <mat-icon>home
-                </mat-icon>
-            </a>
-            <a *ngIf="adminRole" mat-list-item [routerLink]="'/home/file-upload'" matTooltip="Files">
-                <mat-icon>library_books</mat-icon>
-                <!-- <span>Dashboard</span> matBadge="8" matBadgePosition="below after" matBadgeColor="warn" matBadgeSize="small"-->
-            </a>
-            <a mat-list-item [routerLink]="'/home/patient-list'" matTooltip="Pacientes">
-                <mat-icon>check</mat-icon>
-            </a>
-            <a *ngIf="adminRole" mat-list-item [routerLink]="'/home/user-list'" matTooltip="Usuarios">
-                <mat-icon>supervisor_account</mat-icon>
-            </a>
-
-        </mat-nav-list>
-
-    </mat-sidenav>
-
-    <mat-sidenav-content>
-        <div class="background-spinner" *ngIf="loading">
-        <mat-progress-spinner [diameter]="200" [strokeWidth]="5" color="primary" mode="indeterminate">
-        </mat-progress-spinner>
-        </div>
-        <router-outlet></router-outlet>
-    </mat-sidenav-content>
-
-
-</mat-sidenav-container>
+    </mat-sidenav-container>
 
 
 </div>
