--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-html, body { height: 100%; }
-body { 
-    /* background-image: url("assets/img/loginBackground.jpg");
-    background-repeat: no-repeat; 
-    background-size: cover; */
-    margin: 0; 
-    font-family: Roboto, "Helvetica Neue", sans-serif; 
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+html, body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-strong{background-color: yellow;}
+
+strong {
+    color: black;
+    background-color: yellow;
+}
