--- a/src/app/components/patient/patient-list/patient-list.component.html
+++ b/src/app/components/patient/patient-list/patient-list.component.html
@@ -11,62 +11,73 @@
   </mat-form-field>
 </mat-card>
 
-<table mat-table [dataSource]="patients" class="mat-elevation-z8">
+<mat-table [dataSource]="patients" class="mat-elevation-z8">
 
   <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> ID </th>
-    <td mat-cell *matCellDef="let patient">
+    <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
+    <mat-cell *matCellDef="let patient">
       <button mat-icon-button aria-label="Editar" (click)="onSelect(patient)">
         <mat-icon color="primary">assignment</mat-icon>
       </button>
-    </td>
+    </mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="firstname">
-    <th mat-header-cell *matHeaderCellDef> Nombres </th>
-    <td mat-cell *matCellDef="let patient" [innerHTML]="patient.firstname | highLightSearch: filterValue">
-      {{patient.firstname}} </td>
+    <mat-header-cell *matHeaderCellDef> Nombres </mat-header-cell>
+    <mat-cell *matCellDef="let patient">
+    <span class="mobile-label">Nombres: </span>
+    <span [innerHTML]="patient.firstname | highLightSearch: filterValue"></span>
+    </mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="lastname">
-    <th mat-header-cell *matHeaderCellDef> Apellidos </th>
-    <td mat-cell *matCellDef="let patient" [innerHTML]="patient.lastname | highLightSearch: filterValue">
-      {{patient.lastname}} </td>
+    <mat-header-cell *matHeaderCellDef> Apellidos </mat-header-cell>
+    <mat-cell *matCellDef="let patient" >
+    <span class="mobile-label">Apellidos:</span>
+    <span [innerHTML]="patient.lastname | highLightSearch: filterValue"></span>
+    </mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="email">
-    <th mat-header-cell *matHeaderCellDef> email </th>
-    <td mat-cell *matCellDef="let patient" [innerHTML]="patient.email | highLightSearch: filterValue"> {{patient.email}}
-    </td>
+    <mat-header-cell *matHeaderCellDef> email </mat-header-cell>
+    <mat-cell *matCellDef="let patient" >
+    <span class="mobile-label">e-mail:</span>
+    <span [innerHTML]="patient.email | highLightSearch: filterValue"></span>
+    </mat-cell>
 
   </ng-container>
 
   <ng-container matColumnDef="phone">
-    <th mat-header-cell *matHeaderCellDef> Teléfono </th>
-    <td mat-cell *matCellDef="let patient" [innerHTML]="patient.phone | highLightSearch: filterValue"> {{patient.phone}}
-    </td>
+    <mat-header-cell *matHeaderCellDef> Teléfono </mat-header-cell>
+    <mat-cell *matCellDef="let patient"> 
+    <span class="mobile-label">Telefono:</span>
+    <span [innerHTML]="patient.phone | highLightSearch: filterValue"></span>
+    </mat-cell>
   </ng-container>
   <ng-container matColumnDef="mobile">
-    <th mat-header-cell *matHeaderCellDef> Celular </th>
-    <td mat-cell *matCellDef="let patient" [innerHTML]="patient.mobile | highLightSearch: filterValue">
-      {{patient.mobile}} </td>
+    <mat-header-cell *matHeaderCellDef> Celular </mat-header-cell>
+    <mat-cell *matCellDef="let patient">
+      <span class="mobile-label">Celular:</span>
+      <span [innerHTML]="patient.mobile | highLightSearch: filterValue"></span>
+    </mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="accion">
-    <th mat-header-cell *matHeaderCellDef> Acciones
-    </th>
-    <td mat-cell *matCellDef="let patient">
+    <mat-header-cell *matHeaderCellDef> 
+      Acciones
+    </mat-header-cell>
+    <mat-cell *matCellDef="let patient">
+      <span class="mobile-label">Acciones:</span>
       <button mat-icon-button aria-label="Editar" (click)="editPatient(patient.id)">
         <mat-icon color="primary">edit</mat-icon>
       </button>
-    </td>
+    </mat-cell>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 
-
-</table>
+</mat-table>
 
 <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]" [showFirstLastButtons]="true">
 </mat-paginator>
