--- a/src/app/components/user/user-edit/user-edit.component.html
+++ b/src/app/components/user/user-edit/user-edit.component.html
@@ -38,9 +38,10 @@
                 <p>
                     <mat-form-field appearance="outline">
                         <mat-label>Roles</mat-label>
-                    <mat-select multiple [(ngModel)]="user.roles" formControlName="roles">
-                        <mat-option *ngFor="let role of rolesList" 
-                        [value]="role">{{role.rolename}}</mat-option>
+                    <mat-select multiple formControlName="roles">
+                        <mat-option *ngFor="let role of roleSelect" [value]="role">
+                        {{role.rolename}}
+                    </mat-option>
                      </mat-select>
                     </mat-form-field>
                 </p>
