--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div class="container">
-<router-outlet></router-outlet>
+    <div [class.alternative]="otherTheme">
+        <router-outlet></router-outlet>
+    </div>
 </div>
