--- a/src/app/components/consult/consult-add/consult-add.component.css
+++ b/src/app/components/consult/consult-add/consult-add.component.css
@@ -1,22 +1,24 @@
-/* ::ng-deep .mat-form-field-flex>.mat-form-field-infix {
-    padding: 0.4em 0px !important;
-    ;
-  }
-  
-  ::ng-deep .mat-form-field-label-wrapper {
-    top: -1.5em;
-  }
-  
-  ::ng-deep .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
-    transform: translateY(-1.1em) scale(.75);
-    width: 133.33333%;
-  } */
+::ng-deep .mat-form-field-flex>.mat-form-field-infix {
+  padding: 0.4em 0px !important;
+}
 
-  mat-form-field{
-    width: 100% !important;
-  }
+::ng-deep .mat-form-field-label-wrapper {
+  top: -1.5em;
+}
 
-  mat-card{
-    text-align: center;
-    margin:5px;
-  }
+::ng-deep .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
+  transform: translateY(-1.1em) scale(.75);
+  width: 133.33333%;
+}
+
+h2 {
+  text-align: center;
+}
+
+mat-form-field {
+  width: 100% !important;
+}
+
+mat-card {
+  margin: 5px;
+}
