--- a/src/app/components/consult/consult-add/consult-add.component.html
+++ b/src/app/components/consult/consult-add/consult-add.component.html
@@ -9,16 +9,10 @@
 </mat-form-field>
 </p>
 <p>
-    <angular-editor formControlName="description" ></angular-editor>
-    <mat-error *ngIf="addForm.controls['description'].errors?.required">Obligatorio</mat-error>    
-
-    <!-- <mat-form-field appearance="outline">
-        <mat-label>Descripción</mat-label>
-        <textarea matInput formControlName="description"></textarea>
-            <mat-error *ngIf="addForm.controls['description'].errors?.required">Obligatorio</mat-error>
-        </mat-form-field> -->
+    <angular-editor formControlName="description" [config]="editorConfig"></angular-editor>
+    <!-- <mat-error *ngIf="addForm.controls['description'].errors?.required">Obligatorio</mat-error>     -->
     </p>
-    <button mat-button color="primary" [routerLink]="['/home/patient-list']">Cancelar</button>
+    <button mat-button color="primary" [routerLink]="['/home/patient/',patientId]">Cancelar</button>
     <button mat-raised-button color="primary" type="submit" >Guardar</button>
 </form>
 </mat-card>
