--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -14,32 +14,29 @@
 }
 
 .mat-sidenav {
-  background-color: rgb(42, 45, 49);
+  /* background-color: rgb(42, 45, 49); */
   position: fixed;
 }
 
 /* .mat-sidenav-content{
   min-height: 700px;
   background-color: rgb(246, 245, 250)
-}  */
+} */
 
-.mat-list-item {
-  color: white !important;
+ .mat-list-item {
   height: 55px !important;
 }
 
-.mat-list-item:hover {
+/* .mat-list-item:hover {
   background-color: rgba(52, 160, 233, 0.8) !important;
   color: white !important;
   border-radius: 50%;
   height: 55px;
-}
+} */
 
 a span {
-  font-size: 14px;
-  margin-left: 5px;
-  margin-top: 10px;
-}
+  margin-left: 10px;
+} 
 
 .avatar-img {
   width: 40px;
@@ -51,13 +48,20 @@ a span {
 
 .user-info {
   text-align: center;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .user-info img {
   width: 150px;
   border-radius: 50%;
 }
+
+.user-info .mat-menu-item {
+  text-align: center;
+  line-height:20px;
+  height:20px;
+}
+
+
 
 ::ng-deep .mat-menu-panel {
   width: 300px !important;
