--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,81 +1,88 @@
+<mat-sidenav-container>
 
-    <mat-toolbar color="primary" class="mat-elevation-z5">
-        <mat-toolbar-row>
-
-            <button mat-icon-button (click)="snav.toggle()">
-                <mat-icon>menu</mat-icon>
-            </button>
-            <span>LogoApp</span>
-
-            <span class="toolbar-spacer">
-            </span>
-            <button mat-icon-button (click)="changeTheme()">
-                <mat-icon>emoji_objects</mat-icon>
-            </button>
-
-            <mat-menu #settingsMenu="matMenu" xPosition="before">
-
-                <div class="user-info">
-                    <img src="../../../assets/img/avatar.png">
-                    <p mat-menu-item>{{userInfo.firstname}} {{userInfo.lastname}}</p>
-                    <p mat-menu-item>{{userInfo.email}}</p>
-                </div>
-                
-
-                <mat-divider></mat-divider>
-                <button mat-menu-item>
-                    <mat-icon>settings</mat-icon>
-                    <span>Configuración</span>
-                </button>
-                <button mat-menu-item (click)="logOut()">
-                    <mat-icon>power_settings_new</mat-icon>
-                    <span>Salir</span>
-                </button>
-            </mat-menu>
-
-            <img class="avatar-img" src="../../../assets/img/avatar.png" [matMenuTriggerFor]="settingsMenu">
+    <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches">
 
 
-        </mat-toolbar-row>
+        <div class="navbar-logo">
+            <img src="../../../assets/img/logo.png" width="150px" (click)="snav.toggle()">
+        </div>
 
-    </mat-toolbar>
+        <mat-nav-list>
 
-    <mat-progress-bar *ngIf="loading" color="accent" mode="indeterminate">
-    </mat-progress-bar>
+            <a mat-list-item [routerLink]="'/home/dashboard'" [routerLinkActive]="['is-active']">
+                <mat-icon>pie_chart</mat-icon>
+                <span>Dashboard</span>
+            </a>
 
-    <mat-sidenav-container>
+            <a mat-list-item [routerLink]="'/home/file-upload'" [routerLinkActive]="['is-active']">
+                <mat-icon>library_books</mat-icon>
+                <span class="list-item"> Archivos</span>
+            </a>
+
+            <a mat-list-item [routerLink]="'/home/patient-list'" [routerLinkActive]="['is-active']">
+                <mat-icon>assignment_ind</mat-icon>
+                <span class="list-item">Pacientes</span>
+            </a>
+
+            <a mat-list-item *ngIf="adminRole" [routerLink]="'/home/user-list'" [routerLinkActive]="['is-active']">
+                <mat-icon>supervisor_account</mat-icon>
+                <span class="list-item">Usuarios</span>
+            </a>
 
 
-        <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches">
+        </mat-nav-list>
 
-            <mat-nav-list>
-                <a mat-list-item [routerLink]="'/home'">
-                    <mat-icon>riot</mat-icon>
-                    <span>space</span>
-                </a>
-                <a *ngIf="adminRole" mat-list-item [routerLink]="'/home/file-upload'" >
-                    <mat-icon>library_books</mat-icon>
-                    <span>Archivos</span>
-                    <!-- <span>Dashboard</span> matBadge="8" matBadgePosition="below after" matBadgeColor="warn" matBadgeSize="small"-->
-                </a>
-                <a mat-list-item [routerLink]="'/home/patient-list'">
-                    <mat-icon>assignment_ind</mat-icon>
-                    <span>Pacientes</span>
-                </a>
-                <a *ngIf="adminRole" mat-list-item [routerLink]="'/home/user-list'" >
-                    <mat-icon>supervisor_account</mat-icon>
-                    <span>Usuarios</span>
-                </a>
+    </mat-sidenav>
 
-            </mat-nav-list>
+    <mat-sidenav-content>
 
-        </mat-sidenav>
+        <!-- <img *ngIf="!snav.opened" src="../../../assets/img/logo.png" width="70px" (click)="snav.toggle()"> -->
 
-        <mat-sidenav-content>
-            <div class="container">
-                <router-outlet></router-outlet>
+
+        <button class="main-menu" mat-icon-button (click)="snav.toggle()">
+            <mat-icon>menu</mat-icon>
+        </button>
+
+
+        <mat-menu #settingsMenu="matMenu" xPosition="before">
+
+            <div class="user-info">
+                <img src="../../../assets/img/avatar-default.png">
+                <p mat-menu-item>{{userInfo.firstname}} {{userInfo.lastname}}</p>
+                <p mat-menu-item>{{userInfo.email}}</p>
             </div>
-        </mat-sidenav-content>
 
 
-    </mat-sidenav-container>
+            <mat-divider></mat-divider>
+            <button mat-menu-item 
+            (click)="changeTheme()">
+                <mat-icon>emoji_objects</mat-icon>
+                <span>Tema oscuro</span>
+                <mat-slide-toggle color="accent" 
+                [checked]="slideBool" 
+                [disabled]="true"
+                style="margin-left: 30px;">
+                </mat-slide-toggle>
+            </button>
+            <button mat-menu-item>
+                <mat-icon>settings</mat-icon>
+                <span>Configuración</span>
+            </button>
+            <button mat-menu-item (click)="logOut()">
+                <mat-icon>power_settings_new</mat-icon>
+                <span>Salir</span>
+            </button>
+        </mat-menu>
+
+        <img class="avatar-img" src="../../../assets/img/avatar-default.png" [matMenuTriggerFor]="settingsMenu">
+
+
+        <mat-progress-bar *ngIf="loading" color="accent" mode="indeterminate">
+        </mat-progress-bar>
+        <div class="container">
+            <router-outlet></router-outlet>
+        </div>
+    </mat-sidenav-content>
+
+
+</mat-sidenav-container>
