--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,33 +1,29 @@
 @media (max-width: 480px) {
   mat-card {
     text-align: center;
-    width: 100% !important;
-    height: 100% !important;
+    width: 100vh !important;
+    height: 100vh !important;
     margin: 0 !important;
   }
 }
 
 mat-card {
-    text-align: center;
-    position: fixed;
-    min-width: 400px;
-    min-height: 300px;
-    padding: 0;
-    margin-top: 11%;
-  }
+  background-color: rgba(255, 254, 254, 0.85);
+  text-align: center;
+  width: 450px;
+  min-height: 300px;
+  margin: auto;
+  margin-top: 15vh;
+  padding: 0;
+}
 
   .logo{
-    height: 100px;
-    color: cornflowerblue;
+    width: 200px;
+    margin: 10px;
   }
   
-  /* ::ng-deep .mat-card-image{
-    background-color:rgb(141, 117, 245); 
-    height: 200px;
-    margin: 0 !important;
-  } */
-  
   mat-progress-bar{
+    margin-top:0 !important;
     width: 100% !important;
   }
   button {
@@ -35,12 +31,10 @@ mat-card {
   }
 
   :host {
-    background-color: blue;
     display:flex;
-    flex-direction: row;
-    justify-content: center;
   }
 
+  
   ::ng-deep .mat-form-field-flex>.mat-form-field-infix {
     padding: 0.4em 0px !important;
   }
