--- a/src/app/components/patient/patient/patient.component.html
+++ b/src/app/components/patient/patient/patient.component.html
@@ -3,7 +3,7 @@
 
 <h2 align="center">{{patient.firstname}} {{patient.lastname}}</h2>
 
-<button mat-raised-button color="accent" (click)="deletePatientButton()">
+<button mat-raised-button color="warn" (click)="deletePatientButton()">
     <mat-icon>delete</mat-icon>
     Eliminar expediente
 </button>
