--- a/src/app/components/user/user-list/user-list.component.css
+++ b/src/app/components/user/user-list/user-list.component.css
@@ -1,13 +1,52 @@
-.bottom-right{
-    position: fixed !important;
-    right: 5%; /* Add this and change value to set the margin you want */
-    bottom: 5%
-}
-
-table { 
+mat-table {
+    width: 100hv;
+    overflow: auto;
+  }
+  
+  .mobile-label {
+    display: none;
+  }
+  
+  @media(max-width: 600px) {
+    .mobile-label {
+      width: 80px;
+      display: inline-block;
+      font-weight: bold;
+    }
+    .mat-header-row {
+      display: none;
+    }
+    .mat-row {
+      flex-direction: column;
+      align-items: start;
+      padding: 8px 24px;
+    }
+    .mat-cell, .mat-header-cell, .mat-footer-cell {
+      min-height: 25px;
+    }
+  }
+  
+  .bottom-right {
+    position: fixed;
+    bottom: 5%;
+    right: 5%;
+    z-index: 100;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  
+  ::ng-deep .mat-paginator {
+    position: fixed;
+    left: 0;
+    bottom: 0;
     width: 100%;
-}
-
-.mat-row:hover {
-    background-color: rgba(2, 240, 248, 0.2); 
-}
+  }
+  
+  ::ng-deep .mat-paginator-container{
+    justify-content: flex-start !important;
+  }
+  
+  ::ng-deep .mat-option-text {
+    text-align: left;
+  }
