--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,14 +1,19 @@
 @media (max-width: 480px) {
   mat-card {
+    //background-color: rgba(255, 255, 255, 1);
     text-align: center;
-    width: 100vh !important;
+    width: 100vw !important;
     height: 100vh !important;
     margin: 0 !important;
   }
 }
-
+@media (max-height: 480px) {
+  mat-card {
+    height: 480px !important;
+  }
+}
 mat-card {
-  background-color: rgba(255, 254, 254, 0.85);
+  //background-color: rgba(255, 255, 255, 0.85);
   text-align: center;
   width: 450px;
   min-height: 300px;
